# engg-stats-mcp

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  FASTMCP_STANDARDIZATION_REPORT.md  GITHUB_READY.md  LICENSE  MIGRATION_SUMMARY.md  README.md  SCRIPTS_REFERENCE.md  SECURITY.md  engineering-stats-mcp.code-workspace  install.sh  pyproject.toml  requirements.md  requirements.txt  setup-official-servers.md  start_all_servers.sh  start_analytics_servers.sh  start_confluence_analytics.sh  start_confluence_server.sh  start_github_analytics.sh  start_github_server.sh  start_jira_analytics.sh  start_jira_server.sh  start_mcp_for_vscode.sh  stop_all_servers.sh  stop_analytics_servers.sh  test_comprehensive.py  test_github.py  test_main_server.py  test_mcp_endpoints.py  test_mcp_sdk_server.py  test_real_user.py  test_startup.py  test_vscode_config.py  validate_setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  ci.yml.disabled
mcp_confluence/: __init__.py  analytics_server.py  server.py
mcp_github/: __init__.py  analytics_server.py  server.py  server_backup.py  server_simple.py
mcp_jira/: __init__.py  analytics_server.py  server.py
shared/: __init__.py  confluence_client.py  date_utils.py  errors.py  github_client.py  jira_client.py
